--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -100,12 +100,12 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Asturian: {{t|ast|alcontrar}}, {{t|ast|encontrar}}
 * Avar: {{t-needed|av}}
 * Azerbaijani: {{t|az|bulmaq}}, {{t+|az|tapmaq}}
-* Bashkir: {{t|ba|табыу|sc=Cyrl}}
+* Bashkir: {{t|ba|табыу}}
 * Basque: {{t|eu|aurkitu}}, {{t|eu|topatu}}
-* Belarusian: {{t|be|знахо́дзіць|impf|sc=Cyrl}}, {{t|be|знайсці́|pf|sc=Cyrl}}
+* Belarusian: {{t|be|знахо́дзіць|impf}}, {{t|be|знайсці́|pf}}
 * Bengali: {{t+|bn|খোঁজা |tr=khõja}}
 * Breton: {{t+|br|kavout}}
-* Bulgarian: {{t+|bg|нами́рам|impf|sc=Cyrl}}, {{t+|bg|наме́ря|pf}}
+* Bulgarian: {{t+|bg|нами́рам|impf}}, {{t+|bg|наме́ря|pf}}
 * Burmese: {{t+|my|တွေ့}}
 * Catalan: {{t+|ca|trobar}}
 * Chechen: {{t-needed|ce}}
@@ -132,8 +132,8 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 *: Alemannic German: {{t|gsw|aaträffe}}
 * Greek: {{t+|el|βρίσκω}}
 *: Ancient: {{t|grc|εὑρίσκω}}
-* Hebrew: {{t+|he|מָצָא|tr=matzá}}
-* Hindi: {{t+|hi|पाना|sc=Deva}}
+* Hebrew: {{t+|he|מָצָא|tr=matsá}}
+* Hindi: {{t+|hi|पाना}}
 * Hungarian: {{t+|hu|talál}}
 * Icelandic: {{t+|is|finna}}
 * Indonesian: {{t+|id|menemukan}}
@@ -141,15 +141,15 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Irish: {{t+|ga|faigh}}, {{t|ga|aimsigh}}, {{t|ga|tar ar}}
 * Istriot: {{t|ist|truvà}}
 * Italian: {{t+|it|trovare}}, {{t+|it|scoprire}}, {{t+|it|rinvenire}}, {{t+|it|scovare}}, {{t+|it|reperire}}
-* Japanese: {{t+|ja|見付ける|tr=みつける, mitsukeru|sc=Jpan}}
+* Japanese: {{t+|ja|見付ける|tr=みつける, mitsukeru}}
 * Kabuverdianu: {{t|kea|atxa}}, {{t|kea|otxá}}
-* Kazakh: {{t+|kk|табу|sc=Cyrl}}
-* Khmer: {{t|km|រកឃើញ|tr=rɔɔk kʰəəñ|sc=Khmr}}
+* Kazakh: {{t+|kk|табу}}
+* Khmer: {{t|km|រកឃើញ}}
 * Korean: {{t+|ko|찾다}}
 * Kumyk: {{t|kum|тапмакъ}}
 * Kurdish:
-*: Central Kurdish: {{t|ckb|دیتنەوە|sc=ku-Arab}}, {{t+|ckb|دۆزینەوە|sc=ku-Arab}}
-* Kyrgyz: {{t+|ky|табуу|sc=Cyrl}}
+*: Central Kurdish: {{t|ckb|دیتنەوە}}, {{t+|ckb|دۆزینەوە}}
+* Kyrgyz: {{t+|ky|табуу}}
 * Lao: {{t|lo|ບອກ}}
 {{trans-mid}}
 * Latgalian: {{t|ltg|atrast}}, {{t|ltg|rast}}, {{t|ltg|savaicuot}}
@@ -158,17 +158,18 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Lithuanian: {{t|lt|surasti}}
 * Low German: {{t+|nds|finnen}}
 * Lombard: {{t+|lmo|trovà}}, {{t|lmo|truà}}
-* Macedonian: {{t|mk|наоѓа|sc=Cyrl}}, {{t|mk|пронаоѓа|sc=Cyrl}}
+* Macedonian: {{t|mk|наоѓа}}, {{t|mk|пронаоѓа}}
 * Maltese: {{t|mt|sab}}
 * Mizo: {{t|lus|hmu}}, {{t|lus|hmuchhuak}}
-* Mongolian: {{t+|mn|олох|sc=Cyrl}}
+* Mongolian:
+*: Cyrillic: {{t+|mn|олох}}
 * Mòcheno: {{t|mhn|vinnen}}
 * Neapolitan: {{t|nap|ascià}}, {{t|nap|truvà}}
 * Nepali: {{t|ne|भेट्नु}}, {{t|ne|पाउनु}}
 * Ngazidja Comorian: {{t|zdj|uparisa}}
 * Norman: {{t|nrf|trouver}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}, {{qualifier|Föhr-Amrum}} {{t|frr|finj}}
-* Norwegian: {{t+|no|finne}}
+* Norwegian:
 *: Bokmål: {{t+|nb|finne}}
 *: Nynorsk: {{t|nn|finna}}, {{t+|nn|finne}}
 * Occitan: {{t+|oc|trobar}}
@@ -176,7 +177,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Old Polish: {{t|zlw-opl|nałazici|impf}}
 * Old Turkic: {{t|otk|𐰉𐰆𐰞|tr=bul-}}
 * Ossetian: {{t-needed|os}}
-* Persian: {{t+|fa|یافتن|tr=yâftan}}, {{t+|fa|پیدا کردن|tr=peydâ kardan|sc=fa-Arab}}
+* Persian: {{t+|fa|یافتن|tr=yâftan}}, {{t+|fa|پیدا کردن|tr=peydâ kardan}}
 * Polish: {{t+|pl|znajdować|impf}}, {{t+|pl|znaleźć|impf}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Punjabi:
@@ -188,11 +189,11 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Scots: {{t|sco|fin}}
 * Scottish Gaelic: {{t|gd|faigh}}, {{t|gd|lorg}}, {{t|gd|amais}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|наћи|pf}}
-*: Roman: {{t+|sh|naći|pf}}
+*: Cyrillic: {{t|sh|на́ћи|pf}}
+*: Roman: {{t+|sh|náći|pf}}
 * Shor: {{t|cjs|табарға|tr=tabarğa}}
 * Sicilian: {{t+|scn|truvari}}
-* Sinhalese: {{t|si|සොයා ගන්නවා|sc=Sinh}}
+* Sinhalese: {{t|si|සොයා ගන්නවා}}
 * Slovak: {{t+|sk|nájsť|pf}}, {{t|sk|nachádzať|impf}}
 * Slovene: {{t+|sl|najti|pf}}
 * Sorbian:
@@ -200,15 +201,15 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Spanish: {{t+|es|encontrar}}, {{t+|es|hallar}}
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}, {{t+|sv|uppdaga}}, {{t+|sv|upptäcka}}, {{t+|sv|utröna}}
 * Tagalog: {{t|tl|hanapin}}
-* Tajik: {{t+|tg|ёфтан|sc=Cyrl}}, {{t+|tg|пайдо кардан|sc=Cyrl}}
-* Tatar: {{t+|tt|табарга|sc=Cyrl}}
+* Tajik: {{t+|tg|ёфтан}}, {{t+|tg|пайдо кардан}}
+* Tatar: {{t+|tt|табарга}}
 * Thai: {{t+|th|พบ}}, {{t+|th|เจอ}}
 * Tibetan: {{t|bo|བརྙེས}}, {{t|bo|བརྙེས་གནང}} {{qualifier|honorific}}
 * Tocharian B: {{t|txb|kälp-}}
 * Turkish: {{t+|tr|bulmak}}
 * Turkmen: {{t|tk|tapmak}}
 * Tuvan: {{t|tyv|тывар}}
-* Ukrainian: {{t|uk|знахо́дити|impf|sc=Cyrl}}, {{t+|uk|знайти́|pf|sc=Cyrl}}
+* Ukrainian: {{t|uk|знахо́дити|impf}}, {{t+|uk|знайти́|pf}}
 * Uzbek: {{t+|uz|topmoq}}
 * Venetian: {{t+|vec|catar}}
 * Vietnamese: {{t+|vi|tìm}}
@@ -216,7 +217,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Walloon: {{t+|wa|trover}}
 * Welsh: {{t|cy|ffeindio}}, {{t|cy|dod o hyd}}
 * West Frisian: {{t|fy|fine}}, {{t|fy|treffe}}
-* Yiddish: {{t|yi|געפֿינען|sc=Hebr}}
+* Yiddish: {{t|yi|געפֿינען}}
 {{trans-bottom}}
 
 {{trans-see|discover}}
@@ -230,12 +231,14 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * German: {{t+|de|finden}}, {{t+|de|aufdecken}} 
 * Hebrew: {{t+|he|הצביע|tr=hitzbía}}
 * Italian: {{t+|it|trovare}}, {{t+|it|puntualizzare}}, {{t+|it|evidenziare}}, {{t+|it|sottolineare}}
-* Japanese: {{t+|ja|指摘|tr=してきする, shiteki suru|alt=指摘する|sc=Jpan}}
+* Japanese: {{t+|ja|指摘|tr=してきする, shiteki suru|alt=指摘する}}
 {{trans-mid}}
 * Latin: {{t|la|designare}}
-* Macedonian: {{t|mk|востановува|sc=Cyrl}}, {{t|mk|утврдува|sc=Cyrl}}
+* Macedonian: {{t|mk|востановува}}, {{t|mk|утврдува}}
 * Mizo: {{t|lus|hmuchhuak}}
-* Norwegian: {{t+|no|finne}}
+* Norwegian:
+*: Bokmål: {{t+|nb|finne}}
+*: Nynorsk: {{t|nn|finna}}, {{t+|nn|finne}}
 * Persian: {{t+|fa|نمایاندن|tr=namâyândan}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Russian: {{t+|ru|выи́скивать|impf}}
@@ -246,7 +249,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 {{trans-top|decide that}}
 * Arabic: {{t+|ar|وَجَدَ}}
 * Armenian: {{t+|hy|գտնել}}
-* Bulgarian: {{t|bg|убеждавам се|sc=Cyrl}}
+* Bulgarian: {{t+|bg|убеждавам|impf|alt=убежда́вам се}}
 * Czech: {{t|cs|pokládat za}}
 * Danish: {{t+|da|finde}}
 * Dutch: {{t+|nl|vinden}}, {{t|nl|van mening zijn|alt=van mening zijn dat}}
@@ -257,8 +260,10 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Hebrew: {{t+|he|מצא|tr=matzá}}
 {{trans-mid}}
 * Latin: {{t|la|decernere}}
-* Macedonian: {{t|mk|наоѓа|sc=Cyrl}}
-* Norwegian: {{t+|no|finne}}
+* Macedonian: {{t|mk|наоѓа}}
+* Norwegian:
+*: Bokmål: {{t+|nb|finne}}
+*: Nynorsk: {{t|nn|finna}}, {{t+|nn|finne}}
 * Portuguese: {{t+|pt|achar}}
 * Russian: {{t+|ru|находи́ть|impf}}, {{t+|ru|найти́|pf}}
 * Slovak: {{t|sk|považovať}}
@@ -268,7 +273,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 
 {{trans-top|determine, judge}}
 * Armenian: {{t+|hy|գտնել}}
-* Bulgarian: {{t+|bg|решавам|sc=Cyrl}}, {{t+|bg|изчислявам|sc=Cyrl}}
+* Bulgarian: {{t+|bg|реша́вам|impf}}, {{t+|bg|изчисля́вам|impf}}
 * Danish: {{t|da|dømme}}
 * Dutch: {{t+|nl|achten}}
 * Egyptian: {{t-egy|gmj|h=gm-m}}
@@ -278,8 +283,10 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 {{trans-mid}}
 * Japanese: {{t+|ja|評決|alt=評決する|tr=ひょうけつする, hyōketsu suru}}
 * Latin: {{t|la|arbitrare}}, {{t+|la|arbitror}}
-* Macedonian: {{t|mk|востановува|sc=Cyrl}}, {{t|mk|утврдува|sc=Cyrl}}, {{t|mk|констати́ра|sc=Cyrl}}
-* Norwegian: {{t+|no|finne}}
+* Macedonian: {{t|mk|востановува}}, {{t|mk|утврдува}}, {{t|mk|констати́ра}}
+* Norwegian:
+*: Bokmål: {{t+|nb|finne}}
+*: Nynorsk: {{t|nn|finna}}, {{t+|nn|finne}}
 * Portuguese: {{t+|pt|determinar}}, {{t+|pt|julgar}}
 * Russian: {{t+|ru|находи́ть|impf}}, {{t+|ru|найти́|pf}}
 * Spanish: {{t+|es|determinar}}, {{t+|es|juzgar}}
