t+ang:[[findan]] t-balance t+enm:[[finden]] ([[WT:EDIT|Assisted]]) <find#65743004>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -153,13 +153,14 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Lao: {{t|lo|ບອກ}}
 * Latgalian: {{t|ltg|atrast}}, {{t|ltg|rast}}, {{t|ltg|savaicuot}}
 * Latin: {{t+|la|inveniō}}, {{t|la|nancīscor}}, {{t|la|reperiō}}
-{{trans-mid}}
 * Latvian: {{t|lv|atrast}}, {{t|lv|rast}}
+{{trans-mid}}
 * Lithuanian: {{t|lt|surasti}}
 * Low German: {{t+|nds|finnen}}
 * Lombard: {{t+|lmo|trovà}}, {{t|lmo|truà}}
 * Macedonian: {{t|mk|наоѓа|impf}}, {{t|mk|најде|pf}}, {{t|mk|пронаоѓа|impf}}, {{t|mk|пронајде|pf}}
 * Maltese: {{t|mt|sab}}
+* Middle English: {{t|enm|finden}}
 * Mizo: {{t|lus|hmu}}, {{t|lus|hmuchhuak}}
 * Mongolian:
 *: Cyrillic: {{t+|mn|олох}}
@@ -176,6 +177,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Ojibwe: {{q|find things}} {{t|oj|mikige}}, {{q|find people}} {{t|oj|mikaage}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|наити|pf}}, {{t|cu|обрѣсти|pf}}
+* Old English: {{t|ang|findan}}
 * Old Polish: {{t|zlw-opl|nałazici|impf}}
 * Old Turkic: {{t|otk|𐰉𐰆𐰞|tr=bul-}}
 * Ossetian: {{t-needed|os}}
