/* Translations */ BA <choose#65757416>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -55,6 +55,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 * Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
 * Azerbaijani: {{t+|az|seçmək}}
+* Bashkir: {{t|ba|һайлау}}/{{t|ba|һайҙау}}
 * Basque: {{t-needed|eu}}
 * Belarusian: {{t|be|выбіра́ць|impf|sc=Cyrl}}, {{t|be|вы́браць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|নির্বাচন করা}}
