--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -170,6 +170,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||
 * Aromanian: {{t|rup|aleg}}
 * Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
+* Bashkir: {{t|ba|һайлау}}/{{t|ba|һайҙау}}
 * Basque: {{t|eu|aukeratu}}
 * Bulgarian: {{t+|bg|избирам}}
 * Catalan: {{t+|ca|escollir}}, {{t+|ca|triar}}, {{t+|ca|elegir}}
