t+gmq-bot:[[låt]] ([[WT:EDIT|Assisted]]) <speak#65765754>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -325,6 +325,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Walloon: {{t+|wa|cåzer}}, {{t+|wa|divizer}}, {{t+|wa|djåzer}}, {{t+|wa|pårler}}
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
 * West Frisian: {{t|fy|sprekke}}
+* Westrobothnian: {{t|gmq-bot|låt}}
 * White Hmong: {{t|mww|hais lus}}
 * Wolof: {{t+|wo|wax}}
 * Yakut: {{t|sah|саҥар}}
