--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -23,7 +23,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 * {{l|en|Aotearoa}}
 * {{l|en|Aotearoa New Zealand}}
 * {{l|en|Dominion of New Zealand}} {{q|dated|formal}}
-* {{l|en|Manawa}}
+* {{l|en|Marama
 * {{l|en|Enzed}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
