t+bg:[[същност]] t+bg:[[имущество]] t+bg:[[вещество]] ([[WT:EDIT|Assisted]]) <substance#65778531>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -139,6 +139,7 @@ From {{inh|en|enm|substance}}, from {{der|en|fro|substance}}, from {{der|en|la|s
 {{trans-top|essential part}}
 * Armenian: {{t+|hy|էություն}}
 * Asturian: {{t|ast|sustancia|f}}
+* Bulgarian: {{t+|bg|същност|f}}
 * Catalan: {{t+|ca|substància|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|實質}}, {{t+|cmn|实质|tr=shízhì}}
@@ -177,6 +178,7 @@ From {{inh|en|enm|substance}}, from {{der|en|fro|substance}}, from {{der|en|la|s
 {{trans-bottom}}
 
 {{trans-top|material possessions}}
+* Bulgarian: {{t+|bg|имущество|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|資產}}, {{t+|cmn|资产|tr=zīchǎn|sc=Hani}}, {{t+|cmn|財產}}, {{t+|cmn|财产|tr=cáichǎn|sc=Hani}}
 * Danish: {{t|da|formue}}
@@ -199,6 +201,7 @@ From {{inh|en|enm|substance}}, from {{der|en|fro|substance}}, from {{der|en|la|s
 {{trans-bottom}}
 
 {{trans-top|a form of matter with constant chemical composition and characteristic properties}}
+* Bulgarian: {{t+|bg|вещество|n}}
 * Galician: {{t+|gl|substancia|f}}
 * Georgian: {{t|ka|ნივთიერება}}
 * Irish: {{t|ga|damhna|m}}
