t+yi:[[כּלל־ישׂראל]] ([[WT:EDIT|Assisted]]) <Israel#65778610>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -219,7 +219,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Hebrew: {{t|he|עַם יִשְׂרָאֵל|m|tr=ám yisra'él}}, {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|Israel}}
-* Yiddish: {{t|yi|עם־⁠ישׂראל|n|tr=am-yisroel}}, {{t|yi|ישׂראל|m|tr=yisroel}}
+* Yiddish: {{t|yi|עם־⁠ישׂראל|n|tr=am-yisroel}}, {{t|yi|ישׂראל|m|tr=yisroel}}, {{t|yi|כּלל־ישׂראל|m|tr=klal-yisroel}}
 {{trans-bottom}}
 
 {{trans-top|Biblical: name given to Jacob}}
