--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -217,6 +217,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 
 {{trans-top|the Jews, taken collectively}}
 * Hebrew: {{t|he|עַם יִשְׂרָאֵל|m|tr=ám yisra'él}}, {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
+* Ladino: {{t|lad|Yisrael}}, {{t|lad|Am Yisrael}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|Israel}}
 * Yiddish: {{t|yi|עם־⁠ישׂראל|n|tr=am-yisroel}}, {{t|yi|ישׂראל|m|tr=yisroel}}, {{t|yi|כּלל־ישׂראל|m|tr=klal-yisroel}}
