--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -242,6 +242,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 {{trans-mid}}
 * Italian: {{t+|it|Israele|m}}
 * Japanese: {{t+|ja|イスラエル}}
+* Ladino: {{t|lad|Yisrael}}
 * Latin: {{t|la|Israel|m}}
 * Maore Comorian: {{t|swb|Israila}}
 * Polish: {{t+|pl|Izrael|m}}
