--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -322,6 +322,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 # A [[great]] [[effort]] (to do something).
 #: {{ux|en|Some details got lost in the '''push''' to get the project done.}}
 #: {{ux|en|Let's give one last '''push''' on our advertising campaign.}}
+#* {{quote-web|en|url=https://www.thaienquirer.com/37364/activists-push-for-new-ammendment-that-would-give-marital-rights-for-all/|title=Activists push for new ammendment that would give marital rights for all|date=2022-02-09|accessdate=2022-02-09|work=Thai Enquirer|passage=The '''push''' to amend the Civil and Commercial Code on marriage is expected to enter parliament on Wednesday. The amendment would allow same-sex marriage {{...}}|author=Parpart, E., & Patanasophon, N.}}
 # An attempt to persuade someone into a particular course of action.
 # {{lb|en|military}} A [[marching]] or [[drill]] [[maneuver]]/[[manoeuvre]] performed by moving a [[formation]] (especially a [[company front]]) [[forward]] or [[toward]] the [[audience]], usually to accompany a dramatic [[climax]] or [[crescendo]] in the music.
 # A wager that results in no loss or gain for the bettor as a result of a tie or even score
