--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -169,7 +169,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * Italian: {{t+|it|succhiare}}, {{t|it|suggere}}, {{t+|it|ciucciare}}
 * Japanese: {{t+|ja|吸う|tr=すう, suu}}, {{t|ja|しゃぶる|tr=shaburu}}
 * Kambera: {{t|xbr|lamuji}}
-* Karakhanid: {{t|xqa|اَمّاكْ|tr=emmēk}}
+* Karakhanid: {{t|xqa|اماك|tr=emmēk}}
 * Kashubian: {{t|csb|susac}}
 * Kazakh: {{t+|kk|ему}}, {{t|kk|сору}}
 * Khmer: {{t+|km|ជប់}}, {{t+|km|ក្រេប}}, {{t+|km|ជញ្ជក់}}
@@ -251,7 +251,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 * French: {{t+|fr|téter}}
 * German: {{t+|de|saugen}}
 * Hungarian: {{t+|hu|szopik}}
-* Karakhanid: {{t|xqa|اَمّاكْ|tr=emmēk}}
+* Karakhanid: {{t|xqa|اماك|tr=emmēk}}
 * Khmer: {{t+|km|អាំ}}, {{t+|km|ម៉ិម}}
 {{trans-mid}}
 * Ottoman Turkish: {{t|ota|اممك|tr=emmek}}
