/* Translations */ <United States of America#65799917>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -174,8 +174,8 @@
 * Samoan: {{t|sm|Iunaite Sitete o Amerika}}
 * Sanskrit: {{t|sa|अमरेखिकासंयुक्तराज्य}}, {{t|sa|संयुक्तराज्य}}
 * Scots: {{t|sco|Unitit States o Americae}}
-* Scottish Gaelic: Na {{t|gd|Stàitean Aonaichte|f-p}}, Na {{t|gd|Stàitean Aonaichte na h-Aimeireaga|f-p}}
-* Seraiki: {{t|skr|امبریکا|tr=ambrīkā}}
+* Scottish Gaelic: {{t|gd|Stàitean Aonaichte|alt=Na Stàitean Aonaichte|f-p}}, {{t|gd|Stàitean Aonaichte na h-Aimeireaga|alt=Na Stàitean Aonaichte na h-Aimeireaga|f-p}}
+* Seraiki: {{t|skr|اَمبرِیکَا}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Сјѐдӣњене̄ Амѐричке̄ Др̀жаве|f-p}}, {{t|sh|Амѐрика|f}}
 *: Roman: {{t+|sh|Sjèdīnjenē Amèričkē Dr̀žave|f-p}}, {{t+|sh|Amèrika}}
