--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -10,7 +10,7 @@
 * {{sense|country}} {{l|en|Fraunce}} {{qualifier|obsolete}}
 
 ===Etymology===
-From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{der|en|gem-pro|-}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Believed to be most likely from {{der|la|frk|*Frankō||a Frank}}, from {{der|la|gem-pro|*frankô||javelin}}, ultimately from {{der|gem-pro|ine-pro|*preng-||pole, stalk}}. Compare {{m|en|Frank}}.  Displaced {{m|ang|Francland}}, {{m|ang|Francrīċe}}.
+From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{der|en|gem-pro|-}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Believed to be most likely from {{der|en|frk|*Frankō||a Frank}}, from {{der|en|gem-pro|*frankô||javelin}}, ultimately from {{der|en|ine-pro|*preng-||pole, stalk}}. Compare {{m|en|Frank}}.  Displaced {{m|ang|Francland}}, {{m|ang|Francrīċe}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|en|/fɹɑːns/|/fɹæns/}}
