Translations: expanded {{ttbc}} to language when used with {{t-check}} <cut#65811831>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -995,7 +995,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 {{checktrans-top}}
 * Romanian: {{t+check|ro|tăietură}}
 {{trans-mid}}
-* {{ttbc|te}}: {{t+check|te|కోత}}, {{t+check|te|గాటు}}
+* Telugu: {{t+check|te|కోత}}, {{t+check|te|గాటు}}
 {{trans-bottom}}
 
 ===Interjection===
