Translations: expanded {{ttbc}} to language when used with {{t-check}} <flesh#65811859>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -278,7 +278,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|fa}}: {{t+check|fa|گوشت}} (gusht) (1), {{t+check|fa|پوست}} (pust) (2,4,5)
+* Persian: {{t+check|fa|گوشت}} (gusht) (1), {{t+check|fa|پوست}} (pust) (2,4,5)
 {{trans-mid}}
 {{trans-bottom}}
 
