Translations: expanded {{ttbc}} to language when used with {{t-check}} <south pole#65811945>

--- a/en/s/south pole.6995.wikitext
+++ b/en/s/south pole.6995.wikitext
@@ -62,7 +62,7 @@
 {{trans-bottom}}
 
 {{checktrans-top}}<!--don't give the translation for the South Pole!-->
-* {{ttbc|id}}: {{t-check|id|[[kutub]] [[selatan]]}}
+* Indonesian: {{t-check|id|[[kutub]] [[selatan]]}}
 {{trans-mid}}
 * Interlingua: {{t-check|ia|polo sud}}
 {{trans-bottom}}
