--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,4 +1,4 @@
-{{also|hell|ouiouihonhonbaguettelandiwillputmybaguetteinyourvagenehonhonhon}}
+{{also|france|Francë}}
 
 ==English==
 {{wikipedia|lang=en|dab=France (disambiguation)|France}}
