--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -7,6 +7,7 @@
 ===Pronunciation===
 * {{IPA|en|/ˈhæmstɹɪŋ/}}
 * {{audio|en|LL-Q1860 (eng)-Vealhurl-hamstring.wav |Audio (UK)}}
+* {{rhymes|en|æmstɹɪŋ|s=2}}
 
 ===Noun===
 {{en-noun}}
