--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -35,7 +35,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 # {{lb|en|countable|colloquial|by extension}} A [[find]], in particular a [[boyfriend]] or [[girlfriend]] or prospective [[spouse]].
 #: ''Did you see his latest '''catch'''?''
 #: ''He's a good '''catch'''.''
-# {{lb|en|countable}} A stopping [[mechanism]], especially a [[clasp]] which stops something from [[open]]ing.
+# {{senseid|en|mechanism}} {{lb|en|countable}} A stopping [[mechanism]], especially a [[clasp]] which stops something from [[open]]ing.
 #: ''She installed a sturdy '''catch''' to keep her cabinets closed tight.''
 # {{lb|en|countable}} A [[hesitation]] in voice, caused by strong emotion.
 #: ''There was a '''catch''' in his voice when he spoke his father's name.''
