--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -226,6 +226,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Italian: {{t+|it|tagliare}}, {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る|tr=きる, kiru}}
 * Karachay-Balkar: {{t|krc|кесерге}}
+* Kashmiri: {{t|ks|ژَٹُن}}
 * Kazakh: {{t+|kk|кесу}}
 * Kamkata-viri: {{t|bsh|ćia}}
 * Khakas: {{t|kjh|кизерге}}
@@ -611,6 +612,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 * Hebrew: {{t|he|חתוך|tr=khatúkh}}
 * Italian: {{t+|it|tagliato|m}}, {{t+|it|ritagliato|m}}, {{t+|it|accorciato|m}}, {{t+|it|ridotto|m}}
 {{trans-mid}}
+* Kashmiri: {{t|ks|ژۆٹمُت}}
 * Malay: {{t+|ms|putus}}, {{t|ms|terpotong}}
 * Old English: {{t+|ang|gesniden}}
 * Old Saxon: {{t|osx|gisnidan}}
