--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -101,6 +101,8 @@ There is also an occasional weak form ''kəm''. See [[c’mon]].
 # {{lb|en|intransitive|of ''grain''}} To germinate.
 # {{lb|en|transitive|informal}} To pretend to be; to behave in the manner of.
 #: ''Don't '''come''' the innocent victim. We all know who's to blame here.''
+#* '''1837-39''', {{w|Charles Dickens}}, ''{{w|Oliver Twist}}''
+#*: “Hush! hush! Mr. Sikes,” said the Jew, trembling; “don’t speak so loud!”<br>“None of your mistering,” replied the ruffian; “you always mean mischief when you '''come''' that. You know my name: out with it! I shan’t disgrace it when the time comes.”
 
 =====Usage notes=====
 In its general sense, ''come'' specifically marks motion {{l|en|towards}} the [[w:Deixis|deictic]] centre, (whether explicitly stated or not). Its counterpart, usually referring to motion away from or not involving the deictic centre, is {{m|en|go}}. For example, the sentence "Come to the tree" implies contextually that the speaker is already at the tree — "Go to the tree" often implies that the speaker is elsewhere. Either the speaker or the listener can be the deictic centre — the sentences "I will go to you" and "I will come to you" are both valid, depending on the exact nuances of the context. When there is no clear speaker or listener, the deictic centre is usually the focus of the sentence or the topic of the piece of writing. "Millions of people '''came''' to America from Europe" would be used in an article about America, but "Millions of people '''went''' to America from Europe" would be used in an article about Europe.
