/* Adjective */ [[Category:en:Curves]] <curve#65863056>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -15,7 +15,7 @@ Attested since the 1690s, from {{der|en|la|curvus|t=bent, curved}}, ultimately f
 ===Adjective===
 {{en-adj|?}}
 
-# {{lb|en|obsolete}} Bent without [[angles]]; [[crooked]]; [[curved]].
+# {{lb|en|obsolete}} Bent without [[angles]]; [[crooked]]; [[curved]]. [[Category:en:Curves]]
 #: {{ux|en|a '''curve''' [[line]]}}
 #: {{ux|en|a '''curve''' [[surface]]}}
 
