t+pmh:[[𑀩𑁄𑀮𑁆𑀮𑀇]] ([[WT:EDIT|Assisted]]) <speak#65865392>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -221,6 +221,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Luxembourgish: {{t|lb|schwätzen}}
 * Lü: {{t|khb|ᦀᦴᧉ}}, {{t|khb|ᦔᦱᧅ}}
 * Macedonian: {{t+|mk|зборува|impf}}, {{t|mk|говори|impf}}
+* Maharastri Prakrit: {{t|pmh|𑀩𑁄𑀮𑁆𑀮𑀇|tr=bŏllaï}}
 * Malay: {{t+|ms|bercakap}}
 * Malayalam: {{t+|ml|സംസാരിക്കുക}}
 * Maltese: {{t|mt|tkellem}}
