t+inc-ash:[[ *𑀩𑁄𑀮𑁆𑀮𑁆]] ([[WT:EDIT|Assisted]]) <speak#65865707>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -131,6 +131,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Aragonese: {{t+|an|fablar}}
 * Armenian: {{t+|hy|խոսել}}
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
+* Ashokan Prakrit: {{t|inc-ash|*𑀩𑁄𑀮𑁆𑀮𑁆 |tr=*boll}}
 * Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}, {{t|as|বোল|tr=bül}}
 * Asturian: {{t+|ast|falar}}
 * Avar: {{t|av|кӏалъазе}}
