--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -16,12 +16,12 @@ From {{inh|en|enm|costen}}, from {{der|en|fro|coster}}, {{m|fro|couster||to cost
 ====Verb====
 {{en-verb|costs|costing|cost|past2=costed}}
 
-# To [[incur]] a [[charge]] of; to require payment of a (specified) [[price]].
+# {{lb|en|transitive|ditransitive}} To [[incur]] a [[charge]] of; to require payment of a (specified) [[price]].
 #: {{ux|en|This shirt '''cost''' $50, while this was cheaper at only $30.}}
 #: {{ux|en|It will '''cost''' you a lot of money to take a trip around the world.}}
 #* {{RQ:Belloc Lowndes Lodger|I|0016}}
 #*: Thus the red damask curtains which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had '''cost''' a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor;{{nb...}}.
-# To cause something to be lost; to cause the expenditure or relinquishment of.
+# {{lb|en|transitive|ditransitive}} To cause something to be lost; to cause the expenditure or relinquishment of.
 #: {{ux|en|Trying to rescue the man from the burning building '''cost''' them their lives.}}
 #* {{quote-journal|en|title=How our home delivery habit reshaped the world| author=Samanth Subramanian| date=November 21 2019| journal=The Guardian| url=https://www.theguardian.com/technology/2019/nov/21/how-our-home-delivery-habit-reshaped-the-world| passage=the packaging of home-delivered products now accounts for 30% of the solid rubbish the US generates annually, and the cardboard alone '''costs''' 1bn trees. }}
 #*{{RQ:Shakespeare Much Ado About Nothing|act=II|scene=i|passage=though it '''cost''' me ten nights' watchings}}
