--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -20,9 +20,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 # [[animal|Animal]] tissue regarded as [[food]]; [[meat]] (but sometimes excluding [[fish]]).
 #* {{RQ:Mlry MrtDrthr|17.2|2|XV|ij|passage=Thenne syr launcelot sayd / fader what shalle I do / Now sayd the good man / I requyre yow take this hayre that was this holy mans and putte it nexte thy skynne / and it shalle preuaylle the gretely / syr and I wille doo hit sayd sir launcelot / Also I charge you that ye ete no '''flesshe''' as longe as ye be in the quest of the sancgreal / nor ye shalle drynke noo wyne / and that ye here masse dayly and ye may doo hit}}
 <!--Prior quotr#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne-->
-#* '''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 7, xix-xxi,
-#*: The '''flesh''' that twycheth any vnclene thinge shall not be eaten. but burnt with fire:and all that be clene in their flesh, maye eate '''flesh'''.
-#*: Yf any soule eate of the '''flesh''' of the peaceofferynges, that pertayne vnto the Lorde and hys vnclennesse yet apon him, the same soule shall perisshe from amonge his peoole{{sic}}. &para; Moreouer yf a soule twych any vnclene thinge, whether it be the vnclennesse of man or of any vnclene beest or any abhominacion that is vnclene: ad the eate of the '''flesh''' of the peaceoffrynges whiche pertayne vnto the Lord, that soule shall perissh from his people.
+#* {{RQ:Tyndale Pentateuch|Leviticus|7|19–21|XI|verso=1|The '''fleſh''' that twycheth any vnclene thinge ſhall not be eaten. but burnt with fire: and all that be clene in their fleſh, maye eate '''fleſh'''. Yf any ſoule eate of the '''fleſh''' of the peaceofferynges, that pertayne vnto the Lorde and hys vnclenneſſe yet apon him, the ſame ſoule ſhall periſſhe from amonge his peoole.{{sic}} Moreouer yf a ſoule twych any vnclene thinge, whether it be the vnclenneſſe of man or of any vnclene beeſt or any abhominacion that is vnclene: ãd thẽ eate of the '''fleſh''' of the peaceoffrynges whiche pertayne vnto the Lord, that ſoule ſhall periſſh from his people.}}
 #* '''2018''', Raj Patel and Jason W Moore, ''[https://www.theguardian.com/news/2018/may/08/how-the-chicken-nugget-became-the-true-symbol-of-our-era How the chicken nugget became the true symbol of our era]'' in ''The Guardian'', 8 May
 #*: Chicken is already the most popular meat in the US, and is projected to be the planet’s favourite '''flesh''' by 2020.
 # The [[human]] body as a physical entity.
