--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -49,13 +49,18 @@ From {{inh|zh|sit-pro|*ʔak||bad}}; cognate with {{cog|bo|ཨག་པོ||bad}}
 ====Definitions====
 {{zh-hanzi}}
 
-# [[evil]]; [[wicked]]; [[bad]]; [[foul]]; [[ill]]; [[vicious]]
+# [[evil]]; [[wicked]]; [[foul]]
 #: {{zh-x|惡毒|malicious}}
-#: {{zh-x|惡化|to deteriorate}}
 #: {{zh-x|他 經常 作惡，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
 #: {{zh-ant|善}}
-# {{lb|zh|Cantonese}} [[fierce]]; [[hostile]]
+# [[fierce]]; [[hostile]]; [[ferocious]]
+#: {{zh-x|惡戰|to fight fiercely}}
+#: {{zh-x|內 有 惡 犬|there is a fierce dog inside}}
 #: {{zh-x|佢 心情 唔 好 就 好 惡 㗎 喇。|When he's upset, he gets really '''hostile'''.|C}}
+# [[bad]]; [[poor]]
+#: {{zh-x|惡習|bad habits}}
+#: {{zh-x|惡化|to deteriorate}}
+#* {{zh-x|士 志 於 道，而 恥 惡 衣 惡 食 者，未 足 與 議 也。|A scholar, whose mind is set on truth, and who is ashamed of bad clothes and bad food, is not fit to be discoursed with.|ref=Analects}}
 # {{lb|zh|Cantonese|Min Nan}} [[difficult]]
 #: {{zh-x|呢{ni1} 單 嘢 好 惡 搞。|This is really '''hard''' to deal with.|C}}
 # {{lb|zh|Taiwan Min Nan}} [[slow]]
