--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -134,6 +134,7 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Ashokan Prakrit: {{t|inc-ash|*𑀩𑁄𑀮𑁆𑀮𑁆 |tr=*boll}}
 * Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}, {{t|as|বোল|tr=bül}}
+* Assyrian Neo-Aramaic: {{t|aii|ܗܲܡܙܸܡ|tr=hamzim}}
 * Asturian: {{t+|ast|falar}}
 * Avar: {{t|av|кӏалъазе}}
 * Azerbaijani: {{t+|az|danışmaq}}
