--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -58,8 +58,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 #* '''1612''', John Smith, ''Map of Virginia'', in Kupperman 1988, page 158:
 #*: Fourteene miles Northward from the river Powhatan, is the river Pamaunke, which is navigable 60 or 70 myles, but with '''Catches''' and small Barkes 30 or 40 myles farther.
 # {{lb|en|countable|music}} A type of humorous [[round]] in which the voices gradually catch up with one another; usually sung by men and often having [[bawdy]] lyrics.
-#* '''1610''', ''[[s:The Tempest|The Tempest]]'', by [[w:William Shakespeare|Shakespeare]], act 3 scene 2
-#*: Let us be [[jocund]]: will you [[troll]] the '''catch''' / You taught me but while-ere?
+#* {{RQ:Shakespeare Tempest|3|2|text=Let us be [[jocund]]: will you [[troll]] the '''catch''' / You taught me but while-ere?}}
 #* {{quote-book|en|1966|Allen Tate|T. S. Eliot: The Man and His Work|page=76|url=http://books.google.com/books?id=G5ZaAAAAMAAJ
 |passage=One night, I remember, we sang a '''catch''', written (words and music) by Orlo Williams, for three voices.}}
 # {{lb|en|countable|music}} The [[refrain]]; a line or lines of a song which are repeated from verse to verse.
