t+cv:[[кӗҫҫе]] ([[WT:EDIT|Assisted]]) <felt#65952916>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -46,6 +46,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gmw-pro|*felt}
 * Catalan: {{t+|ca|feltre|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|毛氈|sc=Hani}}, {{t+|cmn|毛毡|tr=máozhān|sc=Hani}}
+* Chuvash: {{t|cv|кӗҫҫе}}
 * Crimean Tatar: {{t|crh|kiyiz}} ,{{t|crh|keçe}}
 * Czech: {{t+|cs|plsť|f}}, {{t+|cs|filc|m}}
 * Danish: {{t|da|filt|n}}
