--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -75,6 +75,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 
 * Turkish: {{t+|tr|altın sarısı }}
 * Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
+* Welsh: {{q|of hair}} {{t+|cy|golau|lit=light}}, {{t+|cy|melyn|lit=yellow}}
 {{trans-bottom}}
 
 {{trans-top|having blond hair}}
