--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -426,7 +426,7 @@ From {{inh|nrf|fro|France}}, from {{inh|nrf|ML.|-}} or {{inh|nrf|LL.|Francia}}, 
 From {{inh|fro|ML.|-}} or {{inh|fro|LL.|Francia}}, from {{m|la|Francī}}, the name of a {{der|fro|gem}} tribe.
 
 ===Pronunciation===
-* {{IPA|fro|/ˈfran.t͡sə/}}
+* {{IPA|fro|/ˈfɾãn.t͡sə/}}
 
 ===Proper noun===
 {{fro-proper noun|f}}
