/* Usage notes */ <libre#65972497>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -33,7 +33,7 @@ Senses 2 (“(''software'') with very few limitations on distribution or improve
 #* {{seeCites|en}}
 
 ====Usage notes====
-Sense 2 (“(''software'') with very few limitations on distribution or improvement”) is chiefly used to distinguish such software (also called [[free software]]) from [[freeware]], which is distributed free of charge or [[gratis]].
+Sense 2 (“(''software'') with very few limitations on distribution or improvement”) is chiefly used to distinguish such software (also called [[free software]]) from [[freeware]], which is distributed free of charge or [[gratis]] (the two are not mutually exclusive).
 
 ====Translations====
 {{trans-top|(''software''): with very few limitations on distribution or improvement}}
