--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -49,7 +49,7 @@ Attested since the 1690s, from {{der|en|la|curvus|t=bent, curved}}, ultimately f
 ====Translations====
 {{trans-top|gentle bend}}
 * Afrikaans: {{t|af|kurwe}}
-* Arabic: {{t-needed|ar}}
+* Arabic: {{t+|ar|munḥanā|f}}
 * Armenian: {{t-needed|hy}}
 * Basque: {{t+|eu|kurba}}
 * Bulgarian: {{t+|bg|извивка|f}}
