--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -20,7 +20,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 {{en-verb|clings|clinging|clung}}
 
 # {{senseid|en|hold tightly}}To [[hold]] very [[tight]]ly, as to not fall off.
-#: ''Seaweed '''clung''' to the anchor.''
+#: {{ux|en|Seaweed '''clung''' to the anchor.}}
 #* '''2017,''' {{w|Jennifer S. Holland}}, ''For These Monkeys, It’s a Fight for Survival.'', National Geographic (March 2017)[http://www.nationalgeographic.com/magazine/2017/03/macaques-monkeys-indonesia-endangered-pet-trade/]
 #*: Cartoonish, wide-eyed infants '''cling''' to their mothers or play together low to the ground.
 #* {{quote-book|en|1823|Felicia Dorothea Browne Hemans|The Vespers of Palermo| https://www.worldcat.org/title/vespers-of-palermo-a-tragedy-in-5-acts/oclc/722355055|| And what hath life for thee / That thou shouldst '''cling''' to it thus?|section=Act the First}}
@@ -29,10 +29,9 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 #* {{RQ:Swift An Examination of Certain Abuses in the City of Dublin}}
 #*: I{{...}} '''clung''' my legs as close to his sides as I could.
 # {{lb|en|transitive}} To cause to [[dry up]] or [[wither]].
-#* c. '''1606''', {{w|William Shakespeare}}, “The Tragedie of Macbeth”, Act V, scene v
-#*: If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.
+#* {{RQ:Shakespeare Macbeth|V|v|text=If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.}}
 # {{lb|en|intransitive}} To [[dry up]] or [[wither]].
-#: ''Wood '''clings'''.''
+#: {{ux|en|Wood '''clings'''.}}
 # {{lb|en|figurative|with preposition to}} to [[be fond of]], to [[feel]] strongly about and [[dependent]] on
 
 =====Synonyms=====
