--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -72,8 +72,9 @@ Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original
 #: {{zh-x|我 買 票 是 在 昨天。|It '''was''' yesterday when I bought the ticket.}}
 # {{n-g|a particle showing agreement. In this meaning, {{lang|zh|是}} is stressed.}} [[truly]]; [[indeed]].
 #: {{zh-x|天氣 是 冷。|It is '''indeed''' cold.}}
-#: {{zh-x|是，長{zhǎng}官。|'''Yes''', sir.}}
 #: {{zh-x|這 件 裙子{zi} '''是''' 很 漂亮，但是 太 貴 了。|Although this dress is '''truly''' beautiful, it's too expensive.}}
+# {{lb|zh|in affirmative answers}} [[yes]]; [[right]]
+#: {{zh-x|是，長{zhǎng}官。|'''Yes''', sir.}}
 # [[true]]; [[correct]]
 #: {{zh-x|不是|fault; mistake; wrongdoing}}
 #: {{zh-x|你 說 得{de} 是|What you said is '''right'''}}
