--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -74,7 +74,7 @@ Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original
 #: {{zh-x|天氣 是 冷。|It is '''indeed''' cold.}}
 #: {{zh-x|這 件 裙子{zi} '''是''' 很 漂亮，但是 太 貴 了。|Although this dress is '''truly''' beautiful, it's too expensive.}}
 # {{lb|zh|in affirmative answers}} [[yes]]; [[right]]
-#: {{zh-x|你 是 ^張.^三 嗎？'''是'''。|Are You Zhang San? '''Yes'''.}}
+#: {{zh-x|你 是 ^張.^三 嗎？'''是'''。|Are you Zhang San? '''Yes'''.}}
 #: {{zh-x|是，長{zhǎng}官。|'''Yes''', sir.}}
 #: {{zh-x|是，明白 了。|Yes, got it.}}
 # [[true]]; [[correct]]
