--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -22,21 +22,14 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 # {{senseid|en|belly}}{{lb|en|informal}} The [[belly]].
 #: {{syn|en|belly|abdomen|tummy|bouk|q4=obsolete|gut|guts|maw|q7=archaic}}
 # {{lb|en|uncountable|obsolete}} [[pride|Pride]], [[haughtiness]].
-#* '''1590''', {{w|Edmund Spenser}}, ''{{w|The Faerie Queene}}'', II.vii:
-#*: Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall&nbsp;[…].
-#* '''1613''', {{w|William Shakespeare}}, ''[[s: The Life of King Henry the Eighth|The Life of King Henry the Eighth]]'', IV. ii. 34:
-#*: He was a man / Of an unbounded '''stomach''', ever ranking / Himself with princes;
-#* {{RQ:Locke Education|108}}
-#*: This sort of crying{{...}} proceeding from pride, obstinacy, and '''stomach''', the will, where the fault lies, must be bent.
+#* {{RQ:Spenser Faerie Queene|II|vii|text=Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall&nbsp;[…].}}
+#* {{RQ:Shakespeare Antony|Henry 8|IV|ii|line=34|text=He was a man / Of an unbounded '''stomach''', ever ranking / Himself with princes;}}
+#* {{RQ:Locke Education|108|text=This sort of crying{{...}} proceeding from pride, obstinacy, and '''stomach''', the will, where the fault lies, must be bent.}}
 # {{lb|en|obsolete}} [[appetite|Appetite]].
 #: {{ux|en|a good '''stomach''' for roast beef}}
-#* '''1591''', {{w|William Shakespeare}}, ''[[s: The Comedy of Errors|The Comedy of Errors]]'', I. ii. 50:
-#*: You come not home because you have no '''stomach'''. / You have no '''stomach''', having broke your fast.
-#* '''1595''', {{w|George Peele}}, ''[[w:The Old Wives' Tale (play)|The Old Wives’ Tale]]'', The Malone Society Reprints, 1908, lines 920-922,<sup>[https://archive.org/details/oldwivestale00peeluoft]</sup>
-#*: H<small>OST</small>. How say you sir, doo you please to sit downe?
-#*: E<small>UMENIDES</small>. Hostes I thanke you, I haue no great '''stomack'''.
-#* {{RQ:Burton Melancholy}}, II.ii.1.2:
-#*: If after seven hours' tarrying he shall have no '''stomach''', let him defer his meal, or eat very little at his ordinary time of repast.
+#* {{RQ:Shakespeare Comedy of Errors|I|ii|line=50|text=You come not home because you have no '''stomach'''. / You have no '''stomach''', having broke your fast.}}
+#* {{RQ:Peele Old Wives Tale|lines=920-922|url=https://archive.org/details/oldwivestale00peeluoft|text=H<small>OST</small>. How say you sir, doo you please to sit downe?<br>E<small>UMENIDES</small>. Hostes I thanke you, I haue no great '''stomack'''.}}
+#* {{RQ:Burton Melancholy|II|ii|1|2|text=If after seven hours' tarrying he shall have no '''stomach''', let him defer his meal, or eat very little at his ordinary time of repast.}}
 # {{lb|en|figuratively}} [[desire|Desire]], [[appetite]] (for something abstract).
 #: {{ux|en|I have no '''stomach''' for a fight today.}}
 #* {{RQ:Shakespeare Henry 5|act=IV|scene=iii|page=86|column=2|passage=That he which hath no '''ſtomack''' to this fight, / Let him depart, his Paſport ſhall be made,}}
@@ -422,8 +415,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 # {{lb|en|obsolete|intransitive}} To be angry.
 #* {{RQ:Hooker Laws|passage=Let a man, though never so justly, oppose himself unto them that are disordered in their ways; and what one amongst them commonly doth not '''stomach''' at such contradiction, storm at reproof, and hate such as would reform them?}}
 # {{lb|en|obsolete|transitive}} To [[resent]]; to remember with anger; to [[dislike]].
-#* '''1607''', {{w|William Shakespeare}}, ''[[s: The Tragedy of Antony and Cleopatra|The Tragedy of Antony and Cleopatra]]'', III. iv. 12:
-#*: O, my good lord, / Believe not all; or, if you must believe, / '''Stomach''' not all.
+#* {{RQ:Shakespeare Antony|III|iv|line=12|text=O, my good lord, / Believe not all; or, if you must believe, / '''Stomach''' not all.}}
 #* {{RQ:L'Estrange Fables of Aesop|passage=The Lion began at first to shew his Teeth, and to '''Stomach''' the Affront.}}
 #* {{RQ:Milton Eikonoklastes|passage=The Parliament sit in that body {{...}} to be his counsellors and dictators, though he '''stomach''' it.}}
 # {{lb|en|obsolete|transitive}} To [[turn]] the stomach of; to [[sicken]] or [[repel]].
