--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -84,7 +84,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * [[Appendix:Grains]]
 
 ===Etymology 3===
-From {{der|en|gmh|spalden}}, or {{der|en|non|spald}}.
+From {{der|en|non|spald}}.
 
 ====Noun====
 {{en-noun}}
