--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -65,7 +65,8 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 #: {{zh-x|睇 到 唔 想 睇|watched so much that one doesn't want to watch any more|C}}
 # to [[miss]] {{gl|to feel the absence of someone or something}}
 #: {{zh-x|你 走 了 我 會 想 你 的。|I'll '''miss''' you when you're gone.}}
-
+# to resemble
+# {{zh-x|雲'''想'''衣裳花'''想'''容}}
 ==== Usage notes ====
 * In the sense of want or desire, {{zh-l|想}} is also used as [[would like]]. It also appears together with {{zh-l|要|'''yào'''}} as {{zh-l|想要}} to mean "would like".
 
