/* Noun */ +senseid <bridge#66102245>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -40,7 +40,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 # An arch or superstructure.
 ## {{lb|en|nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
 ##: {{ux|en|The first officer is on the '''bridge'''.}}
-## {{lb|en|music|lutherie}} The piece, on [[string instrument]]s, that supports the [[string]]s from the [[sounding board]].
+## {{senseid|en|musical_instrument}} {{lb|en|music|lutherie}} The piece, on [[string instrument]]s, that supports the [[string]]s from the [[sounding board]].
 ## {{lb|en|billiards|snooker|pool}} A particular form of one hand placed on the table to support the [[cue]] when making a shot in cue sports.
 ## {{lb|en|billiards|snooker|pool}} A cue modified with a convex arch-shaped notched head attached to the narrow end, used to support a player's (shooter's) cue for extended or tedious shots. Also called a [[spider]].
 ## Anything supported at the ends and serving to keep some other thing from resting upon the object spanned, as in engraving, watchmaking, etc., or which forms a platform or staging over which something passes or is conveyed.
