--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -97,12 +97,12 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Kazakh: {{t|kk|пальто}}
 * Khmer: {{t|km|អាវធំ}}
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
-{{trans-mid}}
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 * Latin: {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
+{{trans-mid}}
 * Luhya: {{t|luy|kumuchosi}}
 * Lutshootseed: {{t|lut|kəpu}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
@@ -143,6 +143,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Volapük: {{t-needed|vo}}
 * Welsh: {{a|cy-S}} {{t+|cy|cot|f}}, {{a|cy-N}} {{t|cy|côt|f}}
 * Winnebago: {{t|win|woonąžįxete}}
+* Yiddish: {{t|yi|מענטל|m}}
 {{trans-bottom}}
 
 {{trans-top|covering of material, such as paint}}
