--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -40,6 +40,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 # {{lb|en|poker slang}} A [[community card]] (usually the [[turn]] or the [[river]]) which does not improve a player's hand.
 #: {{ux|en|The two of clubs was a complete '''brick''' on the river.}}
 # The colour [[brick red]].
+#: {{color|731000}}
 # {{lb|en|slang}} One kilo of [[cocaine]].
 #* {{quote-song|en|author=Snap Capone|album=The Memoir|year=2013|url=http://hoodtapes.co.uk/snap-capone-the-memoir/|title=Lights Out|note=from 0:16|text=I can sell '''bricks''', I don't need to rap<br/>[[bujj|Buj]] so peng it makes the fiends collapse<br/>Cook that coca into crack<br/>I was selling Zs while you was in your bed}}
 
