--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -92,9 +92,12 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 {{zh-hanzi}}
 
 # {{lb|zh|Cantonese|Hakka|Teochew}} [[egg]]; [[roe]]
+#: {{zh-x|水蛇春咁長|extremely long or lengthy|lit=as long as a chain of water snake eggs|C}}
 # {{lb|zh|Cantonese|vulgar}} [[testicle]]
 # {{lb|zh|Cantonese|vulgar}} [[goddamn]], [[the hell]]
-# {{lb|zh|Cantonese|vulgar}} (Negates the meaning of the sentence)
+#: {{zh-x|你 搞 乜 春 呀？|What the fuck are you doing?|C}}
+# {{lb|zh|Cantonese|vulgar}} {{n-g|negates the meaning of the sentence}}
+#: {{zh-x|關 你 春 事！|None of your damn business!|C}}
 
 =====Synonyms=====
 {{zh-dial|蛋}}
