--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -89,6 +89,7 @@ Attested since the 1690s, from {{der|en|la|curvus|t=bent, curved}}, ultimately f
 * Norwegian:
 *: Bokmål: {{t+|nb|kurve|m}}
 *: Nynorsk: {{t|nn|kurve|f}}
+* Old English: {{t|ang|byġe|m}}
 * Persian: {{t+|fa|پیچ|tr=pič}}
 * Polish: {{t+|pl|zakręt|m}}
 * Portuguese: {{t+|pt|curva}}
