/* Further reading */ <ich#66176156>

--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -542,6 +542,7 @@ In contemporary German, the genitive forms of personal pronouns are restricted t
 
 ===Further reading===
 * {{R:Duden}}
+* {{R:DWDS}}
 
 {{cln|de|first person pronouns}}
 
