--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -36,6 +36,7 @@
 {{zh-hanzi}}
 
 # {{zh-alt-form|陽|tr=-}}
+# {{zh-alt-form|易|tr=-}}
 
 ===See also===
 * {{zh-l|𠃓}} (used only as a component for derived characters in {{w|simplified Chinese}})
