--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -43,7 +43,7 @@
 
 ===References===
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-
+* {{R:twedu|A01780-003}}
 ----
 
 ==Japanese==
