--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -19,7 +19,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 {{en-noun|~|s}}
 
 # An [[organ]] in animals that stores food in the process of [[digestion]].
-# {{senseid|en|belly}}{{lb|en|informal}} The [[belly]].
+# {{senseid|en|belly}}{{lb|en|informal}} The [[belly], which others call theirs belly or [[tummy]].
 #: {{syn|en|belly|abdomen|tummy|bouk|q4=obsolete|gut|guts|maw|q7=archaic}}
 # {{lb|en|uncountable|obsolete}} [[pride|Pride]], [[haughtiness]].
 #* {{RQ:Spenser Faerie Queene|II|vii|text=Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall&nbsp;[…].}}
