/* Etymology 4 */ RFE <found#66193040>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -186,6 +186,7 @@ From {{inh|en|enm|founden}}, from {{der|en|fro|fondre}}, from {{der|en|la|fundō
 {{trans-see|melt}}
 
 ===Etymology 4===
+{{rfe|en}}
 
 ====Noun====
 {{en-noun}}
