--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -18,7 +18,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|茲|心|ls=psc|c1=p|c2=s|t2=heart}}.bruh
+{{Han compound|茲|心|ls=psc|c1=p|c2=s|t2=heart}}.
 
 ===Pronunciation===
 {{zh-pron
