--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -107,6 +107,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * Arabic: {{t|ar|تَنُّورَة|f}}, {{t|ar|جُوب|m}}, {{t|ar|خَرَّاطَة|f}}, {{t|ar|وَزَرَة|f}}, {{t|ar|جُونِلَّة|f}}
 *: Egyptian Arabic: {{t|arz|جيبة|f|tr=žība|sc=Arab}}
 * Armenian: {{t+|hy|շրջազգեստ}}
+* Assyrian Neo-Aramaic: {{t|aii|ܝܘܼܦܩܵܐ|m|tr=yupqa}}
 * Asturian: {{t+|ast|falda|f}}, {{t|ast|saya|f}}
 * Azerbaijani: {{t+|az|ətək}}, {{t+|az|yubka}}
 * Baluchi: {{t|bal|دامن|tr=dáman}}
