--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -55,28 +55,44 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 {{zh-hanzi}}
 
 # [[earth]]
+#: {{zh-x|天地|heaven and earth}}
 # [[ground]]; [[floor]]
+#: {{zh-x|水泥 地|concrete '''floor'''}}
 #: {{zh-x|這 匹 馬 倒 在 地上{shang}。|The horse collapsed to the '''ground'''.}}
 #: {{zh-x|銀包 跌 咗 落 地。|The wallet fell on the '''ground'''.|C}}
-# [[land]]; [[field]] {{zh-mw|c:塊|c:笪}}
+# [[land]]; [[field]] {{zh-mw|m,c:塊|c:笪|c:幅}}
+#: {{zh-x|低地|lowland}}
 #: {{zh-x|呢{nei1} 塊 地|this plot of '''land'''|C}}
 # [[distance]]; [[separation]]
 #: {{zh-x|車站 離 這 三 里 地。|The bus stop is three miles away.}}
-# [[farmland]]; [[field]]
+# [[farmland]]; [[field]]  {{zh-mw|m,c:塊|c:笪}}
 #: {{zh-x|田間 地頭|farmland}}
 #: {{zh-x|下地 幹活|to farm}}
-# {{lb|zh|only in compounds}} [[place]]; [[location]]
+# {{lb|zh|only in compounds}} [[area]]; [[region]]
 #: {{zh-x|本地|local}}
-#: {{zh-x|地處{chǔ}|located in}}
-# {{lb|zh|only in compounds}} [[status]]; [[situation]]
+#: {{zh-x|殖民地|colony}}
+# [[place]]; [[locality]]
+#: {{zh-x|地處|located in}}
+#: {{zh-x|目的地|destination}}
+#: {{zh-x|分居 兩 地|to live apart in two different places}}
+# [[status]]; [[situation]]; [[position]]
+#: {{zh-x|不敗之地|invincible position}}
+#: {{zh-x|設身處地|put oneself in somebody else’s position}}
+# {{lb|zh|only in compounds}} [[state]] of [[mind]]
 #: {{zh-x|心地|mind}}
 #: {{zh-x|見地|perspective, opinion}}
+# [[place]]; [[room]]; [[space]]
+#: {{zh-x|家 裡 沒 地兒{r} 了|There is no '''room''' in my home (for that).}}
+# [[background]] (behind a text or figure)
+#: {{zh-x|白 地 黑 字|black characters on a white background}}
 # {{lb|zh|only in compounds}} {{zh-short|地球|[[Earth]]}}
 #: {{zh-x|地 日 距離|Earth–Sun distance}}
 #: {{zh-x|類 地 行星|terrestrial planet}}
 # {{lb|zh|Taiwanese Hokkien}} [[home]]
 # {{lb|zh|Hakka}} [[grave]]; [[tomb]]
 #: {{zh-x|^蛤{gé}地 站|{{w|Gedi station}} ({{lang|zh|蛤'''地'''}} means "frog-shaped '''tomb'''")}}
+# {{lb|zh|Mainland China}} [[prefecture]]
+#: {{zh-x|地級市|'''prefecture'''-level city}}
 
 =====Synonyms=====
 {{zh-dial|地板}}
