--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -483,6 +483,7 @@ See combined section below.
 * Russian: {{t+|ru|подхва́тывать|impf|sc=Cyrl}}, {{t+|ru|подхвати́ть|pf|sc=Cyrl}}, {{t+|ru|подцепля́ть|impf|sc=Cyrl}}, {{t+|ru|подцепи́ть|pf|sc=Cyrl}}
 * Spanish: {{t+|es|pillar}}, {{t+|es|coger}}, {{t+|es|agarrar}}
 * Thai: {{t-needed|th}}
+* Ukrainian: {{t|uk|заражатися|impf|tr=zaražatysja}}, {{t|uk|заразитися|pf|tr=zarazytysja}}, {{t|uk|підхо́плювати|impf|tr=pidxópljuvaty}}, {{t|uk|підхопи́ти|pf|tr=pidxopýty}}
 * Vietnamese: {{t+|vi|mắc}}
 {{trans-bottom}}
 
