--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -257,7 +257,7 @@ From {{inh|en|enm|substance}}, from {{der|en|fro|substance}}, from {{der|en|la|s
 ===Verb===
 {{en-verb}}
 
-# {{lb|en|rare|transitive}} To give [[substance]] to; to make real or substantial.
+# {{lb|en|rare|transitive}} To give substance to; to make real or substantial.
 #* {{quote-book|en|year=1873|author=Adeline Dutton Train Whitney|title=The Other Girls|page=335|passage=If life were nothing but what gets phrased and '''substanced''', the world might as well be rolled up and laid away again in darkness.}}
 #* {{quote-book|en|year=1982|author=Dhupaty V. K. Raghavacharyulu|title=The Song of the Red Rose and Other Poems|page=78|passage=The calm ruminating / Reverie, '''substancing''' / Intellect into emotion, / Is shelter enough for love / Unhumiliated by faith.}}
 
