--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -473,7 +473,7 @@ See combined section below.
 * Dutch: {{t+|nl|oplopen}}, {{t+|nl|krijgen}}
 * Esperanto: {{t|eo|ricevi}}
 * Finnish: {{t+|fi|saada}}
-* French: {{t+|fr|attraper}}, {{qualifier|coloquial}} {{t+|fr|choper}}
+* French: {{t+|fr|attraper}}, {{qualifier|colloquial}} {{t+|fr|choper}}
 * German: {{t+|de|einfangen}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|elkap}}
