/* Translations */ <United States of America#66224696>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -168,6 +168,7 @@
 *: Eastern: {{t|pa|ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ}}
 *: Western: {{t|pa|ریاستہائے متحدہ امریکہ}}
 * Quechua: {{t|qu|Hukllachasqa Amirika Suyukuna}}
+* Rarotongan: {{t|rar|Marike}}
 * Romanian: {{t+|ro|Statele Unite ale Americii|f-p}}, {{t|ro|Statele Unite|n-p}}, {{t+|ro|America|f}}
 * Romansch: {{t|rm|Stadis Unids da l'America|m}}
 * Russian: {{t+|ru|Соединённые Шта́ты Аме́рики|m-p}}, {{t+|ru|Аме́рика|f}}
