--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -115,7 +115,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Portuguese: {{t+|pt|Reino Unido|m}}, {{t|pt|Reino Unido da Grã-Bretanha e Irlanda do Norte|m}}
 * Punjabi: {{t|pa|ਸੰਯੁਕਤ ਬਾਦਸ਼ਾਹੀ}}
 * Quechua: {{t|qu|Hukllachasqa Qhapaq Suyu}}
-* Rarotongan: {{t|rar|Parātane}}
+* Rarotongan: {{t|rar|Paratāne}}
 * Romanian: {{t|ro|Regatul Unit al Marii Britanii și Irlandei de Nord|n}}, {{t+|ro|Regatul Unit|n}}
 * Russian: {{t+|ru|Великобрита́ния}}, {{t+|ru|Соединённое Короле́вство|n}}, {{t+|ru|Соединённое Короле́вство Великобрита́нии и Се́верной Ирла́ндии|n}}
 * Rusyn: {{t|rue|Велика Брітанія|n}}, {{t|rue|Споєне кралёвство Великой Брітанії і Северного Ірьска|n}}
