t+ja:[[戦い]] t-balance t+ro:[[bătălie]] t+hu:[[csata]] t+hu:[[ütközet]] t+sl:[[bitka]] t+et:[[lahing]] ([[WT:EDIT|Assisted]]) <fight#66249478>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -475,6 +475,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Danish: {{t+|da|kamp|c}}, {{t+|da|slag|n}}
 * Dutch: {{t+|nl|gevecht|n}}, {{t+|nl|strijd|m}}, {{t+|nl|slag|m}}
 * Egyptian: {{t-egy|ꜥḥꜣ|h=aHA-A24}}
+* Estonian: {{t+|et|lahing}}
 * Finnish: {{t+|fi|taistelu}}
 * French: {{t+|fr|bataille|f}}
 * German: {{t+|de|Kampf|m}}, {{t+|de|Schlacht|f}}, {{t+|de|Gefecht|n}}
@@ -482,16 +483,17 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 *: Ancient: {{t|grc|μάχη|f}}, {{t|grc|δῆρις|f}} {{qualifier|Epic}}
 * Hebrew: {{t+|he|קְרָב|m|tr=kráv}}
 * Hindi: {{t+|hi|युद्ध|m}}, {{t+|hi|लड़ाई|f}}, {{t+|hi|झगड़ा|m}}
+* Hungarian: {{t+|hu|csata}}, {{t+|hu|ütközet}}
 * Icelandic: {{t+|is|bardagi|m}}
 * Italian: {{t+|it|battaglia|f}}, {{t+|it|combattimento|m}}
-* Japanese: {{t+|ja|戦闘|tr=せんとう, sentô}}
+* Japanese: {{t+|ja|戦闘|tr=せんとう, sentô}}, {{t+|ja|戦い|tr=たたかい, tatakai}}
 * Kashmiri: {{t|ks|جَنٛگ}}, {{t|ks|یۄد}}
 * Korean: {{t+|ko|전투(戰鬪)}}, {{t+|ko|전쟁(戰爭)}}, {{t+|ko|싸움}}, {{t+|ko|교전(交戰)}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|شەڕ}}
-{{trans-mid}}
 * Latin: {{t+|la|pugna}}
 * Latvian: {{t|lv|kauja|f}}, {{t|lv|cīņa|f}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|mūšis|m}}
 * Macedonian: {{t|mk|битка|f}}, {{t|mk|бој|m}}
 * Mongolian:
@@ -505,6 +507,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Pijin: {{t|pis|faet}}
 * Polish: {{t+|pl|bój|m}}, {{t+|pl|bitwa|f}}, {{t+|pl|batalia|f}}
 * Portuguese: {{t+|pt|batalha|f}}, {{t+|pt|luta|f}}
+* Romanian: {{t+|ro|bătălie|f}}
 * Romansch: {{t|rm|cumbat|m}}, {{t|rm|cumbata|f}}
 * Russian: {{t+|ru|би́тва|f}}, {{t+|ru|сраже́ние|n}}, {{t+|ru|бата́лия|f}}
 * Sanskrit: {{t+|sa|युद्ध|n}}
@@ -513,7 +516,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 *: Cyrillic: {{t|sh|би̏тка|f}}, {{t|sh|бо̀рба|f}}, {{t|sh|бо̑ј|m}}
 *: Roman: {{t+|sh|bȉtka|f}}, {{t+|sh|bòrba|f}}, {{t+|sh|bȏj|m}}
 * Slovak: {{t+|sk|bitva|f}}, {{t|sk|bitka|f}}, {{t|sk|boj|m}}
-* Slovene: {{t+|sl|boj|m}}
+* Slovene: {{t+|sl|boj|m}}, {{t+|sl|bitka|f}}
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|slag|n}}, {{t+|sv|strid|c}}, {{t+|sv|kamp|c}}
 * Tajik: {{t+|tg|мубориза}}
