--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -58,6 +58,9 @@ Denominal derived from {{och-l|影|shadow; image}} ({{zh-ref|Gong, 2019}}). The 
 # {{†}} to [[cover]]; to [[hide]]
 # {{†}} the [[hour]]s of the [[goat]] (1:00pm to 3:00pm)
 
+=====Synonyms=====
+* {{s|to reflect light}} {{zh-l|反射}}, {{zh-l|照}}
+
 ====Compounds====
 {{zh-der|反映|放映|上映|映襯|映山紅|映射|映衰|映托|映現|映像|映眼|映照|倒映|交映|展映|後先輝映|交相輝映|孫康映雪|疊映|放映室|映媚|放映影幕|映輝|映身|相映成趣|相映|播映|映帶|掩映生姿|照映|放映機|映摹|映壁|映雪囊螢|映像管|照螢映雪|暉映:huīyìng|映雪讀書|映雪|映月讀書|掩映|首映|開映|聚螢映雪|首映典禮|集螢映雪|襯映|遮天映日|輝映|餘映|蔚映|映望}}
 
@@ -78,6 +81,8 @@ Denominal derived from {{och-l|影|shadow; image}} ({{zh-ref|Gong, 2019}}). The 
 {{zh-hanzi}}
 
 # {{zh-hg}} {{zh-only|映㬒|[[not]] [[bright]]; [[not]] [[clear]]}}
+
+{{zh-cat|Advanced}}
 
 ----
 
