Polish: Related terms: converted to {{col3}} <mandat#66291388>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -139,8 +139,8 @@ From {{bor|id|nl|mandaat}}, from {{der|id|fr|mandat}}, from {{der|id|la|mandātu
 {{col3|pl|title=nouns|mandatariusz|mandatariuszka}}
 {{col3|pl|title=adjective|mandatowy}}
 ====Related terms====
-* {{q|adjective}} {{l|pl|mandatariuszowski}}
 
+{{col3|pl|title=adjective|mandatariuszowski}}
 ===Further reading===
 * {{R:pl:WSJP}}
 * {{R:pl:PWN}}
