--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -80,6 +80,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Dutch: {{t+|nl|mantel|m}}, {{t+|nl|jas|m}}
 * Esperanto: {{t+|eo|jako}}, {{qualifier|portata eksterdome, vintre aŭ ĝenerale en malvarma vetero}} {{t|eo|palto}}
 * Estonian: {{t+|et|mantel}}
+* Faroese: {{t|fo|frakki|m}}
 * Finnish: {{t+|fi|takki}}
 * French: {{t+|fr|manteau|m}}, {{t+|fr|paletot|m}}
 * Georgian: {{t|ka|პალტო|sc=Geor}}, {{t|ka|ქურქი|sc=Geor}}, {{t|ka|პიჯაკი|sc=Geor}}, {{t|ka|ქურთუკი|sc=Geor}}
@@ -96,13 +97,13 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
 * Kazakh: {{t|kk|пальто}}
 * Khmer: {{t|km|អាវធំ}}
+{{trans-mid}}
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 * Latin: {{t|la|laena|f}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
-{{trans-mid}}
 * Luhya: {{t|luy|kumuchosi}}
 * Lutshootseed: {{t|lut|kəpu}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
