--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -9,6 +9,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 ===Pronunciation===
 * {{IPA|en|/juːɡəˈslɑːvi.ə/}}
 ** {{audio|en|LL-Q1860 (eng)-Vealhurl-Yugoslavia.wav|Audio (UK)}}
+** {{rhymes|en|iːə|s=5}}
 
 ===Proper noun===
 {{en-proper noun}}
