--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -58,6 +58,7 @@
 #: {{zh-x|昆蟲|insects}}
 # {{lb|zh|obsolete}} {{zh-alt-form|焜}}
 # {{zh-short|昆明}}
+#: {{zh-x|^成 ^昆 ^鐵路|{{w|Chengdu–Kunming railway|Chengdu–'''Kunming''' railway}}}}
 # {{surname|zh}}
 
 =====Compounds=====
