--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -22,8 +22,7 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gmw-pro|*f
 # {{lb|en|transitive}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
 #: {{ux|en|I '''found''' my car keys. They were under the couch.}}
 #* {{RQ:Churchill Celebrity|chapter=2|passage=I had occasion to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, and finally leading me to his buggy, turned and drove out of town.}}
-#* {{quote-book|en|year=1918|author={{w|W. B. Maxwell}}|chapter=10|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]|passage=
-It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
+#* {{RQ:Maxwell Mirror and the Lamp|chapter=10|passage=It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
 #* {{quote-journal|en|date=January 25, 2011|author=Paul Fletcher|work=BBC|title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]|passage=
 {{w|Robin van Persie|Van Persie}} scored a hat-trick against {{w|en|Wigan Atheltic F. C.|Wigan}} on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
 #* {{quote-journal|en|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]|passage=
