--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -49,6 +49,7 @@
 # [[tunnel]]
 #: {{zh-x|礦坑|mining pit; mine shaft}}
 # {{lb|zh|dialectal|including|_|Cantonese}} [[ditch]]; [[trench]] {{zh-mw|c:條}}
+# {{lb|zh|dialectal|including|_|Hakka|Hokkien}} [[valley]]; [[gulley]]
 # {{lb|zh|figurative}} [[trap]]
 # {{lb|zh|by extension|neologism|internet slang}} a [[fandom]]; a [[media]] [[franchise]]
 # to [[bury]] [[alive]]
