--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -334,8 +334,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 #: {{ux|en|It '''thundered''' continuously.}}
 # {{lb|en|intransitive}} To make a [[noise]] like thunder.
 #: {{ux|en|The train '''thundered''' along the tracks.}}
-# {{lb|en|intransitive}} To talk with a [[loud]], [[threatening]] voice.
-# {{lb|en|transitive}} To say (something) with a loud, threatening voice.
+# {{lb|en|intransitive|transitive}} To say (something) with a [[loud]], [[threatening]] voice.
 #: {{ux|en|"Get back to work at once!", he '''thundered'''.}}
 # To produce something with incredible power
 #* {{quote-journal|en
