--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -334,7 +334,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 #: {{ux|en|It '''thundered''' continuously.}}
 # {{lb|en|intransitive}} To make a [[noise]] like thunder.
 #: {{ux|en|The train '''thundered''' along the tracks.}}
-# {{lb|en|ergative}} To (make something) [[move]] very [[fast]] with loud noise. 
+# {{lb|en|ergative}} To (make something) [[move]] very [[fast]] (with loud noise). 
 #* {{quote-song|en|lyricist={{w|David Sylvian}}|composer={{w|Ryuichi Sakamoto}}|title={{w|Forbidden Colours}}|album={{w|Merry Christmas Mr. Lawrence (soundtrack)|Merry Christmas Mr. Lawrence}}|artist=David Sylvian|year=1983|text=Senseless years '''thunder''' by / Millions are willing to give their lives for you / Does nothing live on?}}
 # {{lb|en|intransitive|transitive}} To say (something) with a [[loud]], [[threatening]] voice.
 #: {{ux|en|"Get back to work at once!", he '''thundered'''.}}
