/* Derived terms */ <came#66344569>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -72,6 +72,9 @@ Borrowed from {{bor|fr|nl|kam||[[cog]] of a wheel; originally, [[comb]]}}.
 =====Derived terms=====
 * {{l|fr|arbre à cames}}
 
+=====Descendants=====
+* {{desc|ro|camă|bor=1}}
+
 ===Etymology 2===
 {{clipping|fr|camelote}}.
 
