--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -395,6 +395,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * {{l|en|beer pull}}
 * {{l|en|ring-pull}}
 * {{l|en|rug-pull}}
+* {{l|en|slab pull}}
 
 ====Related terms====
 * {{l|en|on the pull}}
