/* Derived terms */ [[pullout]] <pull#66346064>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -393,6 +393,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 
 ====Derived terms====
 * {{l|en|beer pull}}
+* {{l|en|pullout}}
 * {{l|en|ring-pull}}
 * {{l|en|rug-pull}}
 * {{l|en|slab pull}}
