--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -44,7 +44,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
 #*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
 # {{lb|en|construction}} To obtain (a permit) from a regulatory authority.
-#: It's the contractor's responsibilty to '''pull''' the necessary permits before starting work.
+#: {{ux|en|It's the contractor's responsibility to '''pull''' the necessary permits before starting work.}}
 # {{lb|en|transitive|informal}} To [[do]] or [[perform]].
 #: {{ux|en|He regularly '''pulls''' 12-hour days, sometimes 14.}}
 #: {{ux|en|You'll be sent home if you '''pull''' another stunt like that.}}
