--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -11,7 +11,8 @@
 * [[𛀅]]
 
 ====References====
-* {{Han ref|kx=0391.250|dkj=10824|dj=0724.070|hdz=42307.120|uh=60E1|ud=24801|bh=B463|bd=46179}}
+{{Han ref|kx=0391.250|dkj=10824|dj=0724.070|hdz=42307.120|uh=60E1|ud=24801|bh=B463|bd=46179}}
+{{Han ref|uh=F9B9}}
 
 ----
 
