--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -708,3 +708,14 @@ From {{inh|enm|ang|cuma}}, from {{m|ang|cuman||to come}}.
 # {{es-verb form of|mood=imperative|sense=affirmative|formal=n|person=2|number=s|ending=er|comer}}
 # {{es-verb form of|mood=indicative|tense=present|formal=y|person=2|number=s|ending=er|comer}}
 # {{es-verb form of|mood=indicative|tense=present|person=3|number=s|ending=er|comer}}
+
+----
+==Yola==
+
+===Verb===
+{{head|yol|verb}}
+# {{alt form|yol|coome}} 
+#* {{quote-book|yol|year=1867|title=GLOSSARY OF THE DIALECT OF FORTH AND BARGY|passage='''Come''' adh o' mee gazb.|translation='''Come''' out of my breath.}}
+
+===References===
+* {{R:Poole 1867|page=41}}
