--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -11,7 +11,8 @@
 * [[蜴]] [[賜]] [[錫]] [[踢]] [[剔]]
 
 ====References====
-* {{Han ref|kx=0492.030|dkj=13814|dj=0854.080|hdz=21494.010|uh=6613|ud=26131|bh=A9F6|bd=43510}}
+{{Han ref|kx=0492.030|dkj=13814|dj=0854.080|hdz=21494.010|uh=6613|ud=26131|bh=A9F6|bd=43510}}
+{{Han ref|uh=F9E0}}
 
 ----
 
