--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -12,7 +12,8 @@ Note the different forms, corresponds to different forms of [[真]].
 {{Han char|rn=61|rad=心|as=10|sn=13|four=94081|canj=PJBC|ids=⿰忄真}}
 
 ====References====
-* {{Han ref|kx=0398.261|dkj=11024|dj=0735.350|hdz=42336.020|uh=614E|ud=24910|bh=B756|bd=46934}}
+{{Han ref|kx=0398.261|dkj=11024|dj=0735.350|hdz=42336.020|uh=614E|ud=24910|bh=B756|bd=46934}}
+{{Han ref|uh=FA87}}
 
 ----
 
