--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -179,7 +179,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * French: {{t+|fr|poignarder}}, {{t|fr|frapper d'un coup de couteau}}
 * Galician: {{t+|gl|apuñalar}}, {{t+|gl|acoitelar}}, {{t+|gl|anavallar}}
 * German: {{t+|de|stechen}}, {{t+|de|erstechen}}, {{t+|de|niederstechen}}
-* Greek:
+* Greek: {{t+|el|μαχαιρώνω}}
 *: Ancient: {{t|grc|νύσσω}}
 * Hungarian: {{t+|hu|döf}}, {{t+|hu|szúr}}
 * Indonesian: {{t+|id|tikam}}
