/* Pronunciation */ +en rhyme (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <libre#66366413>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -17,6 +17,7 @@ Senses 2 (“(''software'') with very few limitations on distribution or improve
 * Sense 2:
 ** {{a|RP}} {{IPA|en|/ˈliːbɹə/|/-bɹeɪ/}}
 ** {{a|GA}} {{IPA|en|/ˈlibɹə/|/-bɹeɪ/}}
+* {{rhymes|en|iːbɹə|s=2}}
 * {{hyphenation|en|li|bre}}
 
 ===Adjective===
