/* Alternative forms */ <et cetera#66367020>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -47,7 +47,7 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 
 ===Alternative forms===
 * {{sense|abbreviation}} {{l|la|etc.}}, {{l|la|etc}}, {{l|la|&c.}}, {{l|la|et c.}}
-* {{sense|uncommon}} {{l|la|et caetera}}, {{l|la|et cætera}}
+* {{sense|nonstandard}} {{l|la|et caetera}}, {{l|la|et cætera}}
 
 ===Pronunciation===
 * {{la-IPA|eccl=yes|et cētera}}
