--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -12,6 +12,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|en|/ˌaɪˈiː/|/ɪd ɛst/}}
 * {{audio|en|en-us-i.e..ogg|Audio (US)}}
+* {{rhymes|en|i|s=2}}
 * It is sometimes verbally enunciated as ''[[that is]]''.
 
 ===Adverb===
