--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -66,7 +66,8 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 # to [[miss]] {{gl|to feel the absence of someone or something}}
 #: {{zh-x|你 走 了 我 會 想 你 的。|I'll '''miss''' you when you're gone.}}
 # to resemble
-# {{zh-x|雲'''想'''衣裳花'''想'''容}}
+#: {{zh-x|雲'''想''' 衣裳 花 '''想''' 容||CL|ref={{lang|zh|李白《清平调》}}}}
+
 ==== Usage notes ====
 * In the sense of want or desire, {{zh-l|想}} is also used as [[would like]]. It also appears together with {{zh-l|要|'''yào'''}} as {{zh-l|想要}} to mean "would like".
 
