--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -26,7 +26,7 @@
 {{Han compound|日|㞷|t1=sun|c1=s|c2=p|ls=psc|}}.
 
 ===Pronunciation 1===
-{{zh-forms|alt=暀}}
+{{zh-forms|alt=暀,𣈧,𣇭}}
 {{zh-pron
 |m=wàng
 |c=wong6
