--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -42,7 +42,7 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 ===Adjective===
 {{en-adj|er|more}}
 
-# {{lb|en|especially|of a|woman}} {{alternative form of|en|blond}}
+# {{lb|en|especially|of a woman}} {{alternative form of|en|blond}}
 #* '''1895''', S. R. Crockett, ''A Cry Across the Black Water''
 #*: So the great wasteful summer days went by, the glory of the passionate nights of July, the crisper '''blonde''' luxuriance of August.
 # {{lb|en|especially|of a|woman|offensive}} [[stupid|Stupid]], [[ignorant]], [[naive]].
@@ -58,6 +58,13 @@ See the usage notes in the entry {{m|en|blond}}.
 
 ====Translations====
 {{trans-see|blond}}
+
+===Verb===
+{{en-verb}}
+
+# {{lb|en|especially|of a woman}} {{alt form|en|blond}}
+#* '''1964''', ''LIFE'' (volume 56, number 10, page 25)
+#*: Most women who '''blonde''' their hair today have been doing it for several years.
 
 ===References===
 * {{R:Lexico}}
