--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -19,7 +19,7 @@ Note the different forms, corresponds to different forms of [[真]].
 ----
 
 ==Chinese==
-{{zh-forms|t2=愼|alt=㥲,昚,眘,𡴜,𦚉,𡸱}}
+{{zh-forms|t2=愼|ss=𰑝|alt=㥲,昚,眘,𡴜,𦚉,𡸱}}
 
 ===Glyph origin===
 {{Han etym}}
